--- a/tools/blog/ai-applications-listing/apps.json
+++ b/tools/blog/ai-applications-listing/apps.json
@@ -3,7 +3,7 @@
         "name": "ChatGPT",
         "description": "ChatGPT is a large language model developed by OpenAI that has been trained on a vast amount of text data. It has the ability to understand natural language and generate human-like responses to questions and prompts. ChatGPT can assist with a wide range of tasks, such as answering questions, providing information, generating text, and more.",
         "url": "https://chat.openai.com/",
-        "categories": ["chat", "code generator"]
+        "categories": ["chat", "coding", "copywriting"]
     },
     {
         "name": "OpenAI Developer community",
@@ -27,13 +27,13 @@
         "name": "CodeWP",
         "description": "AI Code Generator For WordPress Creators » CodeWP is an AI code generator built and trained specifically for WordPress. Modes for PHP, JS, WooCommerce and many popular plugins. No more expensive developers, or tedious StackOverflow searches. Prompt, test, and install.",
         "url": "https://codewp.ai/",
-        "categories": ["code generator", "wordpress"]
+        "categories": ["coding", "wordpress"]
     },
     {
         "name": "The GPT Times",
         "description": "Input up to three tweets, select a style, and GPT writes the news. The GPT Times takes tweets as inputs and uses GPT-3 to generate an article and a prompt for a thumbnail, which is sent to Stable Diffusion to generate an image. The response is then compiled and posted here.",
         "url": "https://www.thegpttimes.com/",
-        "categories": ["article generator"]
+        "categories": ["article generator", "copywriting"]
     },
     {
         "name": "Sitekick",
